# transcendance

./: .gitignore  Makefile  package-lock.json
src/: .env  .envFrontend  docker-compose.prod.yml  docker-compose.yml  ip.sh
src/app/: Dockerfile
src/app/backend/: package-lock.json
src/app/backend/src/: app.module.ts  database.providers.ts  main.ts  spheniscidae.controller.ts
src/backend/: Dockerfile  Readme  init.sh  manage.py  nodemon.json  package.json  requirements.txt  tsconfig.json
src/backend/members/: forms.py  models.py  urls.py  views.py
src/backend/server/: app.module.ts  asgi.py  authBackend.py  consumers.py  database.providers.ts  forms.py  main.ts  matchmaking.py  models.py  routing.py  settings.py  spheniscidae.controller.ts  urls.py  views.py  websocket_manager.py  winston.service.ts
src/backend/tools/: package.json
src/backend2/: Dockerfile
src/backend2/server/: app.module.ts  main.ts
src/data/postgre/: postmaster.pid
src/data/postgre/global/: 1260  (+5 more)
src/frontend/: .env  Dockerfile  DockerfileProd  index.html  index2.html  package-lock.json  package.json  start.sh  vite.config.ts
src/frontend/src/: App.vue  RegisterApp.vue  app.html  main.js  vue.config.js
src/frontend/ssl/: localhost.crt  localhost.key
src/frontend2/: Dockerfile  package.json  svelte.config.js
src/frontend2/src/: routes.js
src/frontend2/ssl/: cmd.sh
src/frontend3/: package.json
src/matchmaking/: Cargo.toml  matchmaking.json
src/matchmaking/docker/: Dockerfile
src/matchmaking/src/: ServerSettings.rs  main.rs
src/postgre/tools/: init.sql  setup.sql
(+51 files in other folders)
